# swagger/api/models/poa/compromisoGobierno.js
@@ -1,0 +1,11 @@
+const mongoose = require('mongoose');
+const { Schema } = mongoose;
+
+const compromisoGobiernoSchema = new Schema({
+    nombre: { type: String, required: false},
+    tipo: { type: String}
+},{
+    versionKey: false
+});
+
+module.exports = mongoose.model('CompromisoGobierno', areaSchema, 'poa.compromisosgobierno');
